--- a/src/app/pages/orders/orderMain/orderMain.page.html
+++ b/src/app/pages/orders/orderMain/orderMain.page.html
@@ -3,9 +3,9 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="dashboard"></ion-back-button>
         </ion-buttons>
-        <ion-title>Pedidos NO enviados CCFN</ion-title>
+        <ion-title>Ordenes De Venta</ion-title>
     </ion-toolbar>
-    <img style="width:100%;" src="../../../assets/icon/market.png" alt="">
+    <!-- <img style="width:100%;" src="../../../assets/icon/market.png" alt=""> -->
 </ion-header>
 <ion-content>
     <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
