--- a/src/app/pages/orders/orderList/orderList.page.scss
+++ b/src/app/pages/orders/orderList/orderList.page.scss
@@ -21,3 +21,8 @@
 .Parcial::after {
     background-color: rgb(255, 153, 0);
 }
+
+ion-toolbar.tool-bar {
+    --background: #1b1bfc;
+    color: #ffffff;
+  }
