--- a/src/app/pages/orders/orderMain/orderMain.page.scss
+++ b/src/app/pages/orders/orderMain/orderMain.page.scss
@@ -29,7 +29,7 @@ ion-toolbar.tool-bar {
   color: #ffffff;
 }
 
-ion-toolbar.foo-tool {
-  --background: linear-gradient(to left, #000066 0%, #0066ff 100%);
-  min-height: -webkit-fill-available;
-}
+// ion-toolbar.foo-tool {
+//   --background: linear-gradient(to left, #000066 0%, #0066ff 100%);
+//   min-height: -webkit-fill-available;
+// }
